# wright-telemetry

./: .gitignore  README.md  fake_miners.py  main.py  pyproject.toml  requirements.txt  wright-telemetry.spec
.github/workflows/: braiins-test.yml  build-linux.yml  build-macos.yml  build-windows.yml  luxos-test.yml  vnish-test.yml
docs/: architecture.md  auto-update.md  fake-miners.md  tests.md
docs/samples/: subnets.txt  subnets.xlsx
fake_miners/: Dockerfile  docker-compose.yml  server.py
tests/: conftest.py  test_api_client.py  test_braiins_collector.py  test_config_remote.py  test_discovery.py  test_encryption.py  test_luxos_collector.py  test_mac_util.py  test_models.py  test_scheduler.py  test_vnish_collector.py  test_ws_fan_switch_detection.py
tests/fixtures/braiins/: auth_login.json  cooling_state.json  hashboards.json  miner_details.json  miner_errors.json  miner_stats.json
tests/fixtures/luxos/: config.json  devs.json  events.json  fans.json  pools.json  power.json  summary.json  temps.json  version.json
tests/fixtures/vnish/: info.json  status.json  summary.json  unlock.json
wright_telemetry/: __init__.py  __main__.py  api_client.py  baseline.py  config.py  consent.py  discovery.py  encryption.py  logging_setup.py  mac_util.py  models.py  scheduler.py  service.py  updater.py  ws_client.py
wright_telemetry/collectors/: __init__.py  base.py  braiins.py  factory.py  luxos.py  vnish.py
